docs/apache-airflow-providers-amazon/8.2.0/_sources/_api/airflow/providers/amazon/aws/triggers/glue/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.triggers.glue`
====================================================

.. py:module:: airflow.providers.amazon.aws.triggers.glue


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.glue.GlueJobCompleteTrigger




.. py:class:: GlueJobCompleteTrigger(job_name, run_id, verbose, aws_conn_id)


   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   Watches for a glue job, triggers when it finishes.

   :param job_name: glue job name
   :param run_id: the ID of the specific run to watch for that job
   :param verbose: whether to print the job's logs in airflow logs or not
   :param aws_conn_id: The Airflow connection used for AWS credentials.

   .. py:method:: serialize()

      Returns the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).


   .. py:method:: run()
      :async:

      Runs the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



